# modulos-odoo-18

./: .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  ODOO18_SKILL.md  Plan Optimizado para Portafolio Profesional.md  README.md  SECURITY.md  contexto-proyecto.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  staging.yml
addons/custom_module/: __manifest__.py
addons/custom_module/demo/: demo.xml
addons/custom_module/models/: __init__.py  project_task_extended.py
addons/custom_module/security/: ir.model.access.csv
addons/custom_module/tests/: __init__.py  test_project_task_extended.py
addons/custom_module/views/: project_menu.xml  project_task_views.xml
addons/project_pro/: __manifest__.py
addons/project_pro/docs/: TECHNICAL_DOC.md  USER_MANUAL.md
addons/project_pro/models/: __init__.py  project_task_pro.py
addons/project_pro/security/: ir.model.access.csv
addons/project_pro/tests/: test_project_task_pro.py
addons/project_pro/views/: project_task_pro_views.xml
config/: requirements.txt
scripts/: backup.sh  init-permissions.sh  test.sh
