[project]
name = "odoo-18"
version = "1.0.0"
requires-python = ">=3.10"

[tool.pyright]
include = ["addons"]
extraPaths = [
    "/usr/lib/python3/dist-packages",
    "/mnt/extra-addons"
]

[tool.pylance]
provisionCompanion = true

[tool.pylint]
extension-pkg-allow-list = ["odoo", "odoo.addons"]

[tool.ruff]
target-version = "py310"
